[tool.poetry]
name = "python backend platform"
version = "0.1.0"
description = "Sic Parvis Magna"
authors = ["Luis Zenteno"]

[tool.poetry.dependencies]
django = "^3.1.5"
psycopg2 = "2.8.6"
python = "^3.9"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
